fix header on mobile

--- a/react-portfolio/src/sections/header/header.css
+++ b/react-portfolio/src/sections/header/header.css
@@ -70,6 +70,9 @@ header {
 
 /* MEDIA QUERIES (mobile) */
 @media screen and (max-width: 600px) {
+    header {
+        height: fit-content;
+    }
     .header__profile {
         width: 14rem;
         height: 17rem;
